# week3-ml-baseline-system

./: pyproject.toml
data/processed/: features.csv  features.parquet  orders.parquet  users.parquet
src/ml_baseline/: cli.py
src/ml_baseline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
