[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-baseline"
version = "0.1.0"
description = "Week 3 ML baseline system"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pandas>=2.0",
  "pyarrow>=12.0",
]

[project.scripts]
ml-baseline = "ml_baseline.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]